# real-time-human-pose-analysis

./: .gitignore  README.md  best_action_model.pth  main.py  multi_bodypose.py  multi_headpose.py  ntu_preprocess_master_registry.csv  pyproject.toml  requirements.txt  test.ipynb  test.py  txt2npy.py
helper/: load_UPNA.py  mediapipe_helper.py  screen_util.py
