[project]
name = "real-time-human-pose-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.32",
    "opencv-python>=4.13.0.92",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
